# modelregistry

./: .flake8  .gitignore  .pre-commit-config.yaml  ;  Makefile  Procfile  README.md  URL_FILE  application.py  cow.txt  gen_golden.py  index.html  openapi-spec.yml  pyproject.toml  requirements.txt  run  sample_packages.csv  sample_packages.json
.ebextensions/: 01_python_setup.config  03_logging.config  python.config
.github/: dependabot.yml
.github/workflows/: README.md  cd.yaml  cd.yml  ci.yaml  ci.yml
docs/: AWS_IAM_FIX.md  DFD1_Architecture.drawio  DFD2_Upload_Ingest.drawio  test_plan.mmd
frontend/: index.html
scripts/: aws_setup.sh  fix_iam_permissions.sh  install.sh  print_test_summary.py  process_urls.py  s3_init.sh  test.sh
src/: api_server.py  application.py  auth.py  errors.py  evaluator.py  lineage.py  log.py  metrics_engine.py  models.py  registry_models.py  storage.py  url_handler.py  utils.py
src/adapters/: client.py  code_fetchers.py  dataset_fetchers.py  model_fetchers.py  repo_view.py
src/metrics/: base_metric.py  bus_factor.py  code_quality.py  dataset_and_code.py  dataset_quality.py  license.py  net_score.py  performance.py  ramp_up_time.py  registry.py  reviewedness.py  size.py
src/model_audit_cli/: errors.py  evaluator.py  metrics_engine.py  models.py  url_handler.py
src/model_audit_cli/adapters/: client.py  code_fetchers.py  dataset_fetchers.py  model_fetchers.py
src/model_audit_cli/metrics/: base_metric.py  bus_factor.py  code_quality.py  dataset_and_code.py  dataset_quality.py  license.py  net_score.py  performance.py  ramp_up_time.py  registry.py  size.py
src/resources/: base_resource.py  code_resource.py  dataset_resource.py  model_resource.py
src/templates/: base.html  health.html  index.html  ingest.html  package_detail.html  upload.html
test/: __init__.py  conftest.py  test_api_crud.py  test_download.py  test_health_dashboard.py  test_ingest_upload.py  test_list_packages_bug.py  test_metrics.py  test_model_ingest.py  test_security_track.py  test_user_management.py  utils.py
test/e2e/: README.md  test_health_dashboard.py  test_ingest_page.py  test_navigation.py  test_package_detail_page.py  test_packages_page.py  test_reset_endpoint.py  test_upload_page.py
test/fixtures/: __init__.py
test/helpers/: builders.py
test/performance/: __init__.py
test/unit/: test_models.py  test_storage.py  test_url_handler.py
(+31 files in other folders)
